Add the ability to generate a repository template